// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders app 1`] = `
Array [
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-testid="tab-title"
        id="react-tabs-0"
        role="tab"
        tabindex="0"
      >
        Artists
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-testid="tab-title"
        id="react-tabs-2"
        role="tab"
      >
        Books
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      data-testid="tab-content"
      id="react-tabs-1"
      role="tabpanel"
    >
      <h2>
        Artists content
      </h2>
      <button
        type="button"
      >
        X
      </button>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      class="react-tabs__tab-panel"
      data-testid="tab-content"
      id="react-tabs-3"
      role="tabpanel"
    />
  </div>,
  <input
    placeholder="Title"
    type="text"
    value=""
  />,
  <input
    placeholder="Content"
    type="text"
    value=""
  />,
  <button
    type="button"
  >
    Add
  </button>,
]
`;

exports[`<App /> selects second tab 1`] = `
Array [
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-testid="tab-title"
        id="react-tabs-4"
        role="tab"
        tabindex="0"
      >
        Artists
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-testid="tab-title"
        id="react-tabs-6"
        role="tab"
      >
        Books
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-4"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      data-testid="tab-content"
      id="react-tabs-5"
      role="tabpanel"
    >
      <h2>
        Artists content
      </h2>
      <button
        type="button"
      >
        X
      </button>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="react-tabs__tab-panel"
      data-testid="tab-content"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>,
  <input
    placeholder="Title"
    type="text"
    value=""
  />,
  <input
    placeholder="Content"
    type="text"
    value=""
  />,
  <button
    type="button"
  >
    Add
  </button>,
]
`;

exports[`<App /> selects second tab 2`] = `
Array [
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-testid="tab-title"
        id="react-tabs-4"
        role="tab"
        tabindex="0"
      >
        Artists
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-testid="tab-title"
        id="react-tabs-6"
        role="tab"
      >
        Books
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-4"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      data-testid="tab-content"
      id="react-tabs-5"
      role="tabpanel"
    >
      <h2>
        Artists content
      </h2>
      <button
        type="button"
      >
        X
      </button>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="react-tabs__tab-panel"
      data-testid="tab-content"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>,
  <input
    placeholder="Title"
    type="text"
    value=""
  />,
  <input
    placeholder="Content"
    type="text"
    value=""
  />,
  <button
    type="button"
  >
    Add
  </button>,
]
`;
